# api/controller/sysAdmin.go
@@ -106,28 +106,28 @@ func ResetSysAdminPassword(c *gin.Context) {
 	service.SysAdminService().ResetSysAdminPassword(c, dto)
 }
 
-// // GetSysAdminList 分页获取用户列表
-// // @Summary 分页获取用户列表接口
-// // @Produce json
-// // @Description 分页获取用户列表接口
-// // @Param pageNum query int false "分页数"
-// // @Param pageSize query int false "每页数"
-// // @Param username query string false "用户名"
-// // @Param status query string false "帐号启用状态：1->启用,2->禁用"
-// // @Param beginTime query string false "开始时间"
-// // @Param endTime query string false "结束时间"
-// // @Success 200 {object} result.Result
-// // @router /api/admin/list [get]
-// // @Security ApiKeyAuth
-// func GetSysAdminList(c *gin.Context) {
-// 	PageNum, _ := strconv.Atoi(c.Query("pageNum"))
-// 	PageSize, _ := strconv.Atoi(c.Query("pageSize"))
-// 	Username := c.Query("username")
-// 	Status := c.Query("status")
-// 	BeginTime := c.Query("beginTime")
-// 	EndTime := c.Query("endTime")
-// 	service.SysAdminService().GetSysAdminList(c, PageSize, PageNum, Username, Status, BeginTime, EndTime)
-// }
+// GetSysAdminList 分页获取用户列表
+// @Summary 分页获取用户列表接口
+// @Produce json
+// @Description 分页获取用户列表接口
+// @Param pageNum query int false "分页数"
+// @Param pageSize query int false "每页数"
+// @Param username query string false "用户名"
+// @Param status query string false "帐号启用状态：1->启用,2->禁用"
+// @Param beginTime query string false "开始时间"
+// @Param endTime query string false "结束时间"
+// @Success 200 {object} result.Result
+// @router /api/admin/list [get]
+// @Security ApiKeyAuth
+func GetSysAdminList(c *gin.Context) {
+	PageNum, _ := strconv.Atoi(c.Query("pageNum"))
+	PageSize, _ := strconv.Atoi(c.Query("pageSize"))
+	Username := c.Query("username")
+	Status := c.Query("status")
+	BeginTime := c.Query("beginTime")
+	EndTime := c.Query("endTime")
+	service.SysAdminService().GetSysAdminList(c, PageSize, PageNum, Username, Status, BeginTime, EndTime)
+}
 
 // // UpdatePersonal 修改个人信息
 // // @Summary 修改个人信息接口
