# docs/swagger.yaml
@@ -387,6 +387,44 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: 根据id查询用户接口
+  /api/admin/list:
+    get:
+      description: 分页获取用户列表接口
+      parameters:
+      - description: 分页数
+        in: query
+        name: pageNum
+        type: integer
+      - description: 每页数
+        in: query
+        name: pageSize
+        type: integer
+      - description: 用户名
+        in: query
+        name: username
+        type: string
+      - description: 帐号启用状态：1->启用,2->禁用
+        in: query
+        name: status
+        type: string
+      - description: 开始时间
+        in: query
+        name: beginTime
+        type: string
+      - description: 结束时间
+        in: query
+        name: endTime
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/result.Result'
+      security:
+      - ApiKeyAuth: []
+      summary: 分页获取用户列表接口
   /api/admin/update:
     put:
       description: 修改用户接口
